Maybe fixes html pages with doctype

--- a/ProjectSourceCode/src/views/pages/login.hbs
+++ b/ProjectSourceCode/src/views/pages/login.hbs
@@ -1,3 +1,5 @@
+<!DOCTYPE html>
+<html>
 <div class="px-5">
     <h1>Login</h1>
 </div>
@@ -17,3 +19,4 @@
         <a class="nav-link" href="/register">Register</a>
     </div>
 </form>
+</html>
