--- a/ProjectSourceCode/src/views/pages/register.hbs
+++ b/ProjectSourceCode/src/views/pages/register.hbs
@@ -1,3 +1,5 @@
+<!DOCTYPE html>
+<html>
 <div class="px-5">
     <h1>Register</h1>
 </div>
@@ -17,3 +19,4 @@
         <a class="nav-link" href="/login">Login</a>
     </div>
 </form>
+</html>
