Login and Register Interactions

--- a/ProjectSourceCode/src/views/pages/register.hbs
+++ b/ProjectSourceCode/src/views/pages/register.hbs
@@ -1,12 +1,11 @@
-<!DOCTYPE html>
 <html>
 <div class="px-5">
     <h1>Register</h1>
 </div>
 <form method="post" action="/register">
     <div class="mb-auto px-5">
-        <label for="username" class="form-label">Username</label>
-        <input type="text" class="form-control" name="username"/>
+        <label for="email" class="form-label">Email</label>
+        <input type="text" class="form-control" name="email"/>
         <label for="password" class="form-label">Password</label>
         <input type="password" class="form-control" name="password"/>
     </div>
@@ -19,4 +18,3 @@
         <a class="nav-link" href="/login">Login</a>
     </div>
 </form>
-</html>
