--- a/ProjectSourceCode/src/views/pages/login.hbs
+++ b/ProjectSourceCode/src/views/pages/login.hbs
@@ -3,8 +3,8 @@
 </div>
 <form method="post" action="/login">
     <div class="mb-auto px-5">
-        <label for="username" class="form-label">Username</label>
-        <input type="text" class="form-control" name="username"/>
+        <label for="email" class="form-label">Email</label>
+        <input type="text" class="form-control" name="email"/>
         <label for="password" class="form-label">Password</label>
         <input type="password" class="form-control" name="password"/>
     </div>
