nav-bar complete - needs to be tested once login works

--- a/ProjectSourceCode/src/views/partials/nav.hbs
+++ b/ProjectSourceCode/src/views/partials/nav.hbs
@@ -27,7 +27,7 @@
           {{!-- if logged in the email on top right redirects to profile page --}}
           {{!-- NEEDS TO BE TESTED ONCE WE ARE ABLE TO LOGIN --}}
           {{#if email}}
-            <a style="color:white; font-weight:bolder; font-size:large" class="navbar-link" href="/profile">{{email}}</a>
+            <a class="navbar-link" href="/profile">{{email}}</a>
           {{/if}}
           </li>
       </ul>
