--- a/ProjectSourceCode/src/views/pages/home.hbs
+++ b/ProjectSourceCode/src/views/pages/home.hbs
@@ -1,14 +1,50 @@
 
 <html>
-<h1> I am gonna put some buttons below lol</h1>
+    {{!-- maybe add this to the CSS file? idk man i am not sure what i am doing heheheh --}}
+<style> 
+    .uniform-btn {
+        --bs-btn-padding-y: 3rem;
+        --bs-btn-padding-x: 7rem;
+        --bs-btn-font-size: 2rem;
+        width: 600px; /* Adjust the width as needed */
+        text-align: center; /* Center the text within the button */
+    }
+    .hover-color {
+        background-color: #5D0E41; /* Specify your desired hover color */
+        color: #fff; /* Text color for better contrast */
+    }
+
+    .uniform-btn.custom-color:hover,
+    .uniform-btn.hover-color:hover {
+        background-color: #99407a; /* Specify your desired hover color */
+        color: #fff; /* Text color for better contrast */
+    }
+</style>
     <div id="report_button">
-        <a href="/login" class="btn btn-primary"  style="--bs-btn-padding-y: 4rem; --bs-btn-padding-x: 8rem; --bs-btn-font-size: 2rem;">
-            Report Incident
+        {{!-- Make sure to fix refrence so it goes to "/reports" --}}
+        <a href="/login" class="btn btn-primary uniform-btn hover-color">
+            Make a Report
         </a>
     </div>
-    <div id="report_button">
-        <a href="/login" class="btn btn-primary"  style="--bs-btn-padding-y: 4rem; --bs-btn-padding-x: 8rem; --bs-btn-font-size: 2rem;">
-            Report Incident
+    <br>
+    <div id="alert_button">
+        {{!-- Make sure to fix refrence so it goes to "/alerts" --}}
+        <a href="/login" class="btn btn-primary uniform-btn hover-color">
+            Check Alerts
+        </a>
+    </div>
+    <br>
+    <div id="resource_button">
+        {{!-- Make sure to fix refrence so it goes to "/resources" --}}
+        <a href="/login" class="btn btn-primary uniform-btn hover-color">
+            View Resources
+        </a>
+    </div>
+    <br>
+    <div id="map_button">
+        {{!-- Make sure to fix refrence so it goes to "/map" --}}
+        <a href="/login" class="btn btn-primary uniform-btn hover-color">
+            Look at the map
         </a>
     </div>
 
