Small formatting adjustments

--- a/ProjectSourceCode/src/views/pages/home.hbs
+++ b/ProjectSourceCode/src/views/pages/home.hbs
@@ -5,51 +5,47 @@
         --bs-btn-padding-y: 3rem;
         --bs-btn-padding-x: 7rem;
         --bs-btn-font-size: 2rem;
-        width: 600px; /* Adjust the width as needed */
-        text-align: center; /* Center the text within the button */
+        width: 600px;
+        text-align: center; 
     }
 
     .hover-color {
-        background-color: #5D0E41; /* Specify your desired hover color */
-        color: #fff; /* Text color for better contrast */
+        background-color: #5D0E41; 
+        color: #fff; /* Text color */
     }
 
     .uniform-btn.custom-color:hover,
     .uniform-btn.hover-color:hover {
-        background-color: #99407a; /* Specify your desired hover color */
-        color: #fff; /* Text color for better contrast */
+        background-color: #99407a; 
+        color: #fff; /* Text color */
     }
 
     #nav_buttons_container {
-        text-align: right; /* Align content to the right */
-        margin-right: 20px; /* Adjust margin as needed */
+        text-align: right; 
+        margin-right: 20px; 
     }
 </style>
 <div id="nav_buttons_container">
 <br>
     <div id="report_button">
-        <!-- Make sure to fix reference so it goes to "/reports" -->
         <a href="/reports" class="btn btn-primary uniform-btn hover-color">
             Make a Report
         </a>
     </div>
     <br>
     <div id="alert_button">
-        <!-- Make sure to fix reference so it goes to "/alerts" -->
         <a href="/alerts" class="btn btn-primary uniform-btn hover-color">
             Check Alerts
         </a>
     </div>
     <br>
     <div id="resource_button">
-        <!-- Make sure to fix reference so it goes to "/resources" -->
         <a href="/resources" class="btn btn-primary uniform-btn hover-color">
             View Resources
         </a>
     </div>
     <br>
     <div id="map_button">
-        <!-- Make sure to fix reference so it goes to "/map" -->
         <a href="/map" class="btn btn-primary uniform-btn hover-color">
             Look at the map
         </a>
