started coding profile page - moved logout button to the profile page

--- a/ProjectSourceCode/src/views/partials/nav.hbs
+++ b/ProjectSourceCode/src/views/partials/nav.hbs
@@ -32,7 +32,7 @@
           {{!-- {{/if}} --}}
 
           {{!-- This is temporary, it will be more customized once I figure it out but until then at least this will allow users to logout --}}
-            <a class="navbar-link" href='/logout' >Logout</a>
+            <a class="navbar-link" href='/profile' >Profile</a>
           </li>
       </ul>
     </div>
