--- a/ProjectSourceCode/src/views/pages/register.hbs
+++ b/ProjectSourceCode/src/views/pages/register.hbs
@@ -1,20 +1,20 @@
-<html>
-<div class="px-5">
-    <h1>Register</h1>
+<div class="container min-vh-100 d-flex justify-content-center align-items-center">
+    <form method="post" action="/register">
+        <div class="mb-3">
+            <h1 class="display-6">Register</h1>
+        </div>
+        <div class="mb-3">
+            <label for="email" class="form-label">Email</label>
+            <input type="text" class="form-control" name="email"/>
+            <label for="password" class="form-label">Password</label>
+            <input type="password" class="form-control" name="password"/>
+        </div>
+        <div class="mb-3" style="text-align:center">
+            <button id="register_button" type="submit" class="btn btn-primary">Register</button>
+        </div>
+        <div class="mb-3" style="text-align:center">
+            <p>Already have an account?</p>
+            <a class="link-opacity-100" href="/login">Login</a>
+        </div>
+    </form>
 </div>
-<form method="post" action="/register">
-    <div class="mb-auto px-5">
-        <label for="email" class="form-label">Email</label>
-        <input type="text" class="form-control" name="email"/>
-        <label for="password" class="form-label">Password</label>
-        <input type="password" class="form-control" name="password"/>
-    </div>
-    <div class="mb-auto px-5">
-        <br>
-        <button id="register_button" type="submit" class="btn btn-primary">Register</button>
-    </div>
-    <div class="mb-auto px-5">
-        <p>Already have an account?</p>
-        <a class="nav-link" href="/login">Login</a>
-    </div>
-</form>
