--- a/ProjectSourceCode/src/views/partials/nav.hbs
+++ b/ProjectSourceCode/src/views/partials/nav.hbs
@@ -16,7 +16,7 @@
       <a class="navbar-brand" href="/"></a>
       <ul class="navbar-nav mr-auto">
         <li class="nav-item">
-            <a class = "navbar-link" href= '/'>Home</a>
+            <a class = "navbar-link" href= '/home'>Home</a>
         </li>
       </ul>
     </div>
