Oops, got rid of the API key lol

--- a/ProjectSourceCode/src/views/pages/home.hbs
+++ b/ProjectSourceCode/src/views/pages/home.hbs
@@ -28,7 +28,7 @@
 
 {{!-- This is broken!!!!!!!!!!!!!!!! --}}
 <div id = "Map projection"> 
-    <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAuAu9ExnoZHAZVIXDyCZcvhx8L95KH3Cs&callback=initMap"></script>
+    <script async defer src="API_KEY"></script>
     <script>
     function initMap() {
     var mapOptions = {
