--- a/ProjectSourceCode/src/views/pages/profile.hbs
+++ b/ProjectSourceCode/src/views/pages/profile.hbs
@@ -1,27 +1,3 @@
-<style>
-    .button-39 {
-        background-color: #FFFFFF;
-        border: 1px solid rgb(209,213,219);
-        border-radius: .5rem;
-        box-sizing: border-box;
-        color: #111827;
-        font-family: "Inter var",ui-sans-serif,system-ui,-apple-system,system-ui,"Segoe UI",Roboto,"Helvetica Neue",Arial,"Noto Sans",sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol","Noto Color Emoji";
-        font-size: .875rem;
-        font-weight: 600;
-        line-height: 1.25rem;
-        padding: .75rem 1rem;
-        text-align: center;
-        text-decoration: none #D1D5DB solid;
-        text-decoration-thickness: auto;
-        box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.05);
-        cursor: pointer;
-        user-select: none;
-        -webkit-user-select: none;
-        touch-action: manipulation;
-    }
-
-</style>
-
 <head>
     <!-- Required meta tags -->
     <meta charset="utf-8">
@@ -35,7 +11,7 @@
 
 <div class="card" style="width: 25rem; height:36rem; background-color:#87CEEB; margin-left:20px">
     <br>
-    <img class="card-img-top" src="https://fivepointsdentalnj.com/wp-content/uploads/2015/11/anonymous-user.png" style="height: 300px; width: auto; align-self: center;">
+    <img class="card-img-top" src="../../resources/img/blankProfilePic.jpg" style="height: 300px; width: auto; align-self: center;">
     
     <div class="card-body">
         {{!-- if user has input their name it will show up, otherwise they will appear as "new user" --}}
