--- a/ProjectSourceCode/src/views/pages/login.hbs
+++ b/ProjectSourceCode/src/views/pages/login.hbs
@@ -1,3 +1,40 @@
+{{#if message}}
+    {{>message}}
+{{/if}}
+  <div class="container py-5 h-100">
+    <div class="row d-flex justify-content-center align-items-center h-100">
+      <div class="col-12 col-md-8 col-lg-6 col-xl-4">
+        <div class="card shadow-2-strong" style="border-radius: 1rem; background-color: lightblue">
+          <div class="card-body p-5 text-center">
+            <form method="post" action="/login">
+            <h3 class="mb-5">Login</h3>
+
+            <div data-mdb-input-init class="form-outline mb-4">
+              <label for="email" class="form-label">Email</label>
+              <input type="text" class="form-control" name="email"/>
+            </div>
+
+            <div data-mdb-input-init class="form-outline mb-4">
+              <label for="password" class="form-label">Password</label>
+              <input type="password" class="form-control" name="password"/>
+            </div>
+
+            <hr class="my-4">
+
+            <button data-mdb-button-init data-mdb-ripple-init class="btn btn-primary btn-lg btn-block" type="submit">Login</button>
+
+            <hr class="my-4">
+
+            <div class="mb-3" style="text-align:center">
+            <p>Dont have an account?</p>
+            <a class="link-opacity-100" href="/register">Sign up</a>
+            </form>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+<!--
 <div class="container min-vh-100 d-flex justify-content-center align-items-center">
     <form method="post" action="/login">
         <div class="mb-3">
@@ -18,3 +55,4 @@
         </div>
     </form>
 </div>
+-->
