--- a/ProjectSourceCode/src/views/pages/editProfile.hbs
+++ b/ProjectSourceCode/src/views/pages/editProfile.hbs
@@ -17,7 +17,7 @@
 
 <br>
 
-<div class="card" style="width: 25rem; height:39rem; background-color:#87CEEB; margin-left:20px">
+<div class="card" style="width: 25rem; height:39rem; background-color:lightblue; margin-left:20px">
     <br>
     <img class="card-img-top" src="https://fivepointsdentalnj.com/wp-content/uploads/2015/11/anonymous-user.png" style="height: 300px; width: auto; align-self: center;">
     <form method="post" action="/editProfile">
