--- a/ProjectSourceCode/src/views/pages/login.hbs
+++ b/ProjectSourceCode/src/views/pages/login.hbs
@@ -21,7 +21,7 @@
 
             <hr class="my-4">
 
-            <button data-mdb-button-init data-mdb-ripple-init class="btn btn-primary btn-lg btn-block" type="submit">Login</button>
+            <button data-mdb-button-init data-mdb-ripple-init class="btn btn-block btn-outline-light" style="background-color:#00224D; width:200px" type="submit">Login</button>
 
             <hr class="my-4">
 
