prelimiary api routes and pages for adminalerts and reports

--- a/ProjectSourceCode/src/views/pages/Reports.hbs
+++ b/ProjectSourceCode/src/views/pages/Reports.hbs
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-<h1>All Incident Reports</h1>
+<h1>All Verified Reports:</h1>
     <div id="incident_reports">
         <table>
             <tr>
