--- a/ProjectSourceCode/src/views/pages/home.hbs
+++ b/ProjectSourceCode/src/views/pages/home.hbs
@@ -82,7 +82,7 @@
 
     <div id="map_container">
          <div id="map">
-        <script async defer src="https://maps.googleapis.com/maps/api/js?key=API_KEY&callback=initMap"></script>
+        <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAuAu9ExnoZHAZVIXDyCZcvhx8L95KH3Cs&callback=initMap"></script>
         <script>
     function initMap() {
         var mapOptions = {
@@ -125,21 +125,3 @@
  </div>
 </div>
 </div>
-
-{{!-- <script>
-function initMap() {
-    var mapOptions = {
-        center: new google.maps.LatLng(40.014984, -105.270546),
-        zoom: 13,
-        mapTypeId: google.maps.MapTypeId.ROADMAP
-    };
-
-    var map = new google.maps.Map(document.getElementById('map'), mapOptions);
-
-    var marker = new google.maps.Marker({
-        position: mapOptions.center,
-        map: map,
-        title: 'Location'
-    });
-}
-</script> --}}
