--- a/ProjectSourceCode/src/views/pages/home.hbs
+++ b/ProjectSourceCode/src/views/pages/home.hbs
@@ -29,7 +29,7 @@
 <br>
     <div id="report_button">
         <!-- Make sure to fix reference so it goes to "/reports" -->
-        <a href="/reports" class="btn btn-primary uniform-btn hover-color">
+        <a href="/report" class="btn btn-primary uniform-btn hover-color">
             Make a Report
         </a>
     </div>
@@ -50,7 +50,7 @@
     <br>
     <div id="map_button">
         <!-- Make sure to fix reference so it goes to "/map" -->
-        <a href="/map" class="btn btn-primary uniform-btn hover-color">
+        <a href="/maps" class="btn btn-primary uniform-btn hover-color">
             Look at the map
         </a>
     </div>
