fixed profile page bug when not logged in and fixed merge discrepencies

--- a/ProjectSourceCode/src/views/pages/home.hbs
+++ b/ProjectSourceCode/src/views/pages/home.hbs
@@ -63,7 +63,7 @@
     <br>
     <div id="alert_button">
         <!-- Make sure to fix reference so it goes to "/alerts" -->
-        <a href="/alerts" class="btn btn-primary uniform-btn hover-color">
+        <a href="/check-alerts" class="btn btn-primary uniform-btn hover-color">
             Check Alerts
         </a>
     </div>
