added comments, organized API functions

--- a/ProjectSourceCode/src/views/pages/profile.hbs
+++ b/ProjectSourceCode/src/views/pages/profile.hbs
@@ -11,6 +11,7 @@
 
 <div class="card" style="width: 25rem; height:36rem; background-color:lightblue; margin-left:20px">
     <br>
+    {{!-- profile photo --}}
     <img class="card-img-top" src="../../resources/img/blankProfilePic.jpg" style="height: 300px; width: auto; align-self: center;">
     
     <div class="card-body">
@@ -20,7 +21,10 @@
         <h6 id="user-location" class="card-text">{{location}}</h6>
         <p id="user-bio" class="card-text">{{bio}}</p>
 
+        {{!-- edit profile button - goes to separate page and returns to this page with new changes when user hits save --}}
         <a href="/editProfile" class="btn btn-block btn-outline-light" style="background-color:#00224D">Edit Profile</a>
+
+        {{!-- logout button --}}
         <a href='/logout' class="btn btn-block btn-outline-light" style="background-color:#00224D">Logout</a>
     </div>
 </div>
