--- a/ProjectSourceCode/src/views/pages/adminalerts.hbs
+++ b/ProjectSourceCode/src/views/pages/adminalerts.hbs
@@ -1,28 +1,30 @@
 <!DOCTYPE html>
 <html>
+{{message}}
 <h1> Current Reports For Review:</h1>
     <div id="incident_reports">
         <table>
             <tr>
                 <th>Location</th>
                 <th>Incident Type</th>
-                <th>Details</th>
                 <th>Latitude</th>
                 <th>Longitude</th>
                 <th>Time of Report</th>
                 <th>Approve Report</th>
+                <th>Details</th>
+
             </tr>
             {{!-- using "this" and loop to gather all reports and add approve button to each--}}
             {{#each incident_reports}}
             <tr>
                 <td>{{location}}</td>    
                 <td>{{incident_type}}</td>
-                <td>{{details}}</td>
                 <td>{{latitude}}</td>
                 <td>{{longitude}}</td>
                 <td>{{reported_at}}</td>
+                <td>{{details}}</td>
                 <td>
-                    {{#if approval == 1}}
+                    {{#if approval}}
                     <form method="post" action="/adminalerts/approve">
                         <input type="hidden" name="report" value={{id}}>
                         <button type="button" value="disabled" disabled>Approve</button>
