--- a/ProjectSourceCode/src/views/pages/home.hbs
+++ b/ProjectSourceCode/src/views/pages/home.hbs
@@ -1,4 +1,4 @@
-
+{{!-- This is the final and correct version of the homepage --}}
 <style> 
     body, html {
         height: 99%;
@@ -52,34 +52,76 @@
         height: 100%;
     }
 </style>
-<div id="nav_buttons_container">
-<br>
-    <div id="report_button">
-        <!-- Make sure to fix reference so it goes to "/reports" -->
-        <a href="/report" class="btn btn-primary uniform-btn hover-color">
-            Make a Report
-        </a>
+
+<div class="button-container">
+    <div id="nav_buttons_container">
+        <div id="report_button">
+            <a href="/report" class="btn btn-primary uniform-btn hover-color">
+                Make a Report
+            </a>
+        </div>
+        <br>
+        <div id="alert_button">
+            <a href="/alerts" class="btn btn-primary uniform-btn hover-color">
+                Check Alerts
+            </a>
+        </div>
+        <br>
+        <div id="resource_button">
+            <a href="/resources" class="btn btn-primary uniform-btn hover-color">
+                View Resources
+            </a>
+        </div>
+        <br>
+        <div id="map_button">
+            <a href="/map" class="btn btn-primary uniform-btn hover-color">
+                Look at the map
+            </a>
+        </div>
     </div>
-    <br>
-    <div id="alert_button">
-        <!-- Make sure to fix reference so it goes to "/alerts" -->
-        <a href="/check-alerts" class="btn btn-primary uniform-btn hover-color">
-            Check Alerts
-        </a>
-    </div>
-    <br>
-    <div id="resource_button">
-        <!-- Make sure to fix reference so it goes to "/resources" -->
-        <a href="/resources" class="btn btn-primary uniform-btn hover-color">
-            View Resources
-        </a>
-    </div>
-    <br>
-    <div id="map_button">
-        <!-- Make sure to fix reference so it goes to "/map" -->
-        <a href="/maps" class="btn btn-primary uniform-btn hover-color">
-            Look at the map
-        </a>
-    </div>
+
+    <div id="map_container">
+         <div id="map">
+        <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAuAu9ExnoZHAZVIXDyCZcvhx8L95KH3Cs&callback=initMap"></script>
+        <script>
+    function initMap() {
+        var mapOptions = {
+        center: new google.maps.LatLng(40.014984, -105.270546),
+        zoom: 13,
+        mapTypeId: google.maps.MapTypeId.ROADMAP
+        };
+
+        var map = new google.maps.Map(document.getElementById('map'), mapOptions);
+
+        // Fetch incident data from the server
+        fetch('/api/incidents')
+        .then(response => response.json())
+        .then(data => {
+            data.forEach(incident => {
+            const incidentLoc = new google.maps.LatLng(incident.latitude, incident.longitude);
+            const marker = new google.maps.Marker({
+                position: incidentLoc,
+                map: map,
+                title: incident.location 
+            });
+
+            const infowindow = new google.maps.InfoWindow({
+                content: `
+                <div><strong>Location:</strong> ${incident.location}</div>
+                <div><strong>Type:</strong> ${incident.incident_type}</div>
+                <div><strong>Details:</strong> ${incident.details}</div>
+                <div><strong>Reported At:</strong> ${incident.reported_at}</div>
+                `
+            });
+
+            marker.addListener('click', () => {
+                infowindow.open(map, marker);
+            });
+            });
+        })
+        .catch(error => console.error('Error fetching incident data:', error));
+        }
+    </script>
+ </div>
 </div>
-{{>footer}}
+</div>
