Small edits to make sure home page is linked correctly

--- a/ProjectSourceCode/src/views/pages/home.hbs
+++ b/ProjectSourceCode/src/views/pages/home.hbs
@@ -75,7 +75,7 @@
         </div>
         <br>
         <div id="map_button">
-            <a href="/map" class="btn btn-primary uniform-btn hover-color">
+            <a href="/maps" class="btn btn-primary uniform-btn hover-color">
                 Look at the map
             </a>
         </div>
