--- a/ProjectSourceCode/src/views/pages/home.hbs
+++ b/ProjectSourceCode/src/views/pages/home.hbs
@@ -63,7 +63,7 @@
         </div>
         <br>
         <div id="alert_button">
-            <a href="/alerts" class="btn btn-primary uniform-btn hover-color">
+            <a href="/check-alerts" class="btn btn-primary uniform-btn hover-color">
                 Check Alerts
             </a>
         </div>
@@ -75,7 +75,7 @@
         </div>
         <br>
         <div id="map_button">
-            <a href="/map" class="btn btn-primary uniform-btn hover-color">
+            <a href="/Maps" class="btn btn-primary uniform-btn hover-color">
                 Look at the map
             </a>
         </div>
